# tdt4173-course-project

./: .gitignore  pyproject.toml
delivery/: Report.ipynb
docs/: Project Competition Link.txt  README.md  dev_setup.md  features_from_mapping.md  kaggle_metric.ipynb  material_receival_visualization.ipynb
scripts/: 1_exploratory_data_analysis.ipynb  2_data_processing.ipynb  3_feature_engineering.ipynb  3b_build_features_from_mapping.ipynb  3b_build_feautres_from_mapping_test.ipynb  3b_features_from_mapping.ipynb  4_modelling.ipynb
scripts/artifacts/: category_maps.json  master_data_dtype_report.json
