[project]
name = "tdt4173-course-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "pip>=25.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "xgboost>=3.0.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.12.10",
    "ty>=0.0.1a19",
]
