[project]
name = "tdt4173-course-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=6.30.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "pip>=25.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "ty>=0.0.1a22",
]
